--- a/style.css
+++ b/style.css
@@ -56,3 +56,16 @@ button:hover {
   color: white;
   background-color: #000011;
 }
+
+/* responsive */
+@media (max-width: 700px) {
+  .content {
+    width: 90%;
+    /* padding: 0 20px; */
+  }
+
+  .text,
+  .waktu {
+    font-size: 1.5em;
+  }
+}
